--- a/src/components/SnakeGame.css
+++ b/src/components/SnakeGame.css
@@ -2,14 +2,14 @@
 .game-board {
   display: grid;
   justify-content: center;
-  grid-template-columns: repeat(18, 40px);
-  grid-template-rows: repeat(18, 40px);
+  grid-template-columns: repeat(8, 80px);
+  grid-template-rows: repeat(8,80px);
 }
 
 .cell {
   position: relative;
-  width: 40px;
-  height: 40px;
+  width: 80px;
+  height: 80px;
   border: 1px solid #ccc;
   overflow: hidden; /* Hide overflowing content */
 }
@@ -19,9 +19,14 @@
   height: 40px;
   object-fit: cover;
 } */
+.pokemon_img {
+  max-height: 80px;
+  width: auto;
+}
+
 
 .empty {
-  background-color: #fff;
+ 
 }
 
 .snake {
